--- a/CSS/employees.css
+++ b/CSS/employees.css
@@ -1,8 +1,3 @@
 body {
-   background-image: url("../img/ZenBG.png");
-}
-
-#element {
-    color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+   background-image: url("../Images/ZenBG.png");
 }
