Updated background image link, updated img styles on css stylesheet

--- a/CSS/employees.css
+++ b/CSS/employees.css
@@ -1,3 +1,9 @@
 body {
    background-image: url("../Images/ZenBG.png");
 }
+img.img-circle {
+	border:2px solid #DDD;
+	width:100px;
+	display:inline;
+	border-radius:50%
+}
