--- a/CSS/employees.css
+++ b/CSS/employees.css
@@ -8,3 +8,9 @@ img.img-circle {
 	display:inline;
 	border-radius:50%
 }
+div.media-body {
+	border: 3px solid #c5d2d6;
+	padding: 40px;
+	border-radius: 20px;
+	width: 600px;
+}
