--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,24 +1,35 @@
 body {
+  font-size: 16px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
-  nav.vertical {
-  border-radius: 4px;
-  box-shadow: 0 0 10px rgba(0,0,0,.15);
-  overflow: hidden;
-  text-align: left;
-  width: 170px;
-  font-style: Helvetica;
+.container {
+  width: 900px;
+  margin: 0 auto;
 }
-
-nav.vertical > ul {
-    list-style-type: none;
+.logo {
+  width: 900px;
+  height: 200px;
 }
-
-nav.vertical > ul > li {
-      display: block;
+.header {
+  text-align: center;
 }
 .img-circle {
+  display: block;
   height: 250px;
   width: 170px;
 }
-
+.directory {
+  margin: 0 auto;
+  padding: 0 auto;
+}
+.profile {
+  padding: 40px;
+  display: inline-block;
+  border: 3px solid #c5d2d6;
+  border-radius: 20px;
+}
+a, a:visited {
+  font-size: 1.5em;
+  color: #43bfff;
+  text-decoration: none;
+}
