--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ body {
 }
 .img-circle {
   display: block;
-  height: 250px;
+  height: 200px;
   width: 170px;
 }
 .directory {
@@ -27,6 +27,7 @@ body {
   display: inline-block;
   border: 3px solid #c5d2d6;
   border-radius: 20px;
+  text-align: center;
 }
 a, a:visited {
   font-size: 1.5em;
