Added department pages

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,10 +1,11 @@
-body {
+body, h1, h2, h3 {
   font-size: 16px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
 .container {
-  width: 900px;
+  width: 1300px;
   margin: 0 auto;
+  position: relative;
 }
 .logo {
   width: 900px;
@@ -12,6 +13,16 @@ body {
 }
 .header {
   text-align: center;
+}
+.departments {
+  font-size: 0.75em;
+  width: 130px;
+  height: 800px;
+  float: left;
+  border: 3px solid #c5d2d6;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 20px;
 }
 .img-circle {
   display: block;
@@ -21,6 +32,10 @@ body {
 .directory {
   margin: 0 auto;
   padding: 0 auto;
+  float: left;
+  width: 1000px;
+  padding: 20px;
+
 }
 .profile {
   padding: 40px;
