--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,10 @@ body, h1, h2, h3 {
   font-size: 16px;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
 }
+body {
+    background-color: #f2ffd3;
+}
+
 .container {
   width: 1300px;
   margin: 0 auto;
